--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -760,6 +760,208 @@ font-weight: bold;
 
 /*------------------banner1-------------------*/
 
+
+/*==================== contact area =================*/
+
+/* ===================
+breadcrumb css
+====================== */
+
+.site-breadcrumb{
+  position: relative;
+}
+
+.site-breadcrumb-wrapper {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  padding-top: 312px;
+  padding-bottom: 100px;
+  z-index: 1;
+}
+
+.site-breadcrumb-wrapper::before {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.40);
+  z-index: -1;
+}
+
+.site-breadcrumb .breadcrumb-title {
+  font-size: 40px;
+  color: #fff;
+  font-weight: 700;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.site-breadcrumb .breadcrumb-menu {
+  position: relative;
+  z-index: 1;
+}
+
+.site-breadcrumb .breadcrumb-menu li {
+  position: relative;
+  display: inline-block;
+  margin-left: 25px;
+  color: #fff;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+
+.site-breadcrumb .breadcrumb-menu li a {
+  color: #fff;
+  -moz-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.site-breadcrumb .breadcrumb-menu li.active {
+  color: #FF5D22;
+}
+
+.site-breadcrumb .breadcrumb-menu li::before {
+  position: absolute;
+  content: '\f101';
+  font-family: 'Font Awesome 5 Pro';
+  right: -21px;
+  top: 1px;
+  text-align: center;
+  font-size: 16px;
+  color: #fff;
+}
+
+.site-breadcrumb .breadcrumb-menu li:first-child {
+  margin-left: 0;
+}
+
+.site-breadcrumb .breadcrumb-menu li:last-child:before {
+  display: none;
+}
+
+.site-breadcrumb .breadcrumb-menu li a:hover {
+  color: #FF5D22;
+}
+
+@media (max-width: 991px) {
+  .site-breadcrumb-wrapper {
+    padding-top: 360px;
+    padding-bottom: 120px;
+  }
+}
+
+/* @media (max-width: 768px) {
+  .site-breadcrumb-wrapper{
+   width: 452px;
+  }
+} */
+
+
+.contact-wrapper {
+  padding: 50px 30px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 40px 5px rgb(0 0 0 / 5%);
+  position: relative;
+}
+.contact-info {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #E7E9EC;
+}
+.contact-info-icon i {
+  font-size: 25px;
+  color: black;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  /* border-radius: 50px; */
+  text-align: center;
+  /* background: red; */
+  font-weight: bold;
+}
+.contact-content {
+  margin-bottom: 50px;
+}
+.align-self-center {
+  align-self: center!important;
+}
+.contact-form {
+  padding: 0 40px;
+}
+.contact-form-header {
+  margin-bottom: 30px;
+  color: #192E3F;
+}
+.contact-form .form-group {
+  margin-bottom: 25px;
+}
+.contact-form .form-group .form-control {
+  padding: 12px 20px;
+  border-radius: 8px;
+  box-shadow: none;
+  transition: all .5s ease-in-out;
+}
+
+.contact-area .btn-send-message {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 32px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  color: #fff;
+  background: #e31e24;
+}
+
+.contact-area .btn-send-message:hover {
+  background: #398378;
+  color: #fff;
+}
+
+
+
+.map1{
+  font-size: 40px;
+  color: black!important;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.icon1{
+  font-size: 30px;
+  color: black;
+  font-weight: bold;
+}
+.icon2{
+  font-size: 20px;
+  color: red;
+  font-weight: bold;
+}
+.icon3{
+  font-size: 20px;
+  color: black;
+}
+
+/*==================== contact area =================*/
+
 /*----------------------------------------*/
 
 /*  15. Footer Area
