--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -761,6 +761,120 @@ font-weight: bold;
 /*------------------banner1-------------------*/
 
 
+/*===================== Career area ==================*/
+
+.page:not(body) {
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 960px){
+.pageHeader {
+  background-image: url();
+}
+}
+.pageHeader {
+  padding: 60px 0;
+  background: repeat-y center/100% auto url(./../img/bg-grid-6col--3-cols.svg);
+}
+.content {
+  width: 100%;
+  max-width: 1068px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.pageHeader h1 {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+}
+.pageHeader p {
+  font-size: 36px;
+  margin-right: 20%;
+  margin-left: 10%;
+}
+.pageHeader p {
+  font-weight: 100;
+  font-size: 24px;
+  line-height: 1.25;
+}
+h4, .h4 {
+  font-weight: 600;
+  font-size: 27px;
+  line-height: 1;
+}
+@media screen and (min-width: 960px){
+.pageHeader h1 {
+    max-width: 90%;
+    margin-bottom: 45px;
+    padding-bottom: 45px;
+}
+}
+@media screen and (min-width: 960px){
+.pageHeader p {
+    font-size: 36px;
+    margin-right: 20%;
+    margin-left: 10%;
+}}
+.btn-internship {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 32px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  color: #fff;
+  background: #e31e24;
+}
+
+.btn-internship:hover {
+  background: #398378;
+  color: #fff;
+}
+
+
+/* @media screen and (min-width: 960px){
+.feature__content {
+    margin: 0 10%;
+    width: 80%;
+}}
+@media screen and (min-width: 640px){
+.feature__content {
+  
+  grid-template-columns: 50% 50%;
+    grid-template-rows: auto 1fr;
+}}
+.feature__content {
+    display: grid;
+}
+.feature__media {
+  grid-row: 2;
+  margin-bottom: 15px;
+}
+img, video {
+  height: auto;
+  max-width: 100%;
+  display: block;
+}
+@media screen and (min-width: 640px){
+.align-left .feature__header, .align-left .feature__copy {
+    padding-right: 40%;
+}}
+.feature__copy p:last-of-type {
+  margin-bottom: 30px;
+}
+.feature__copy p {
+  margin-bottom: 15px!important;
+} */
+
+
+/*===================== career area ==================*/
+
+
 /*==================== contact area =================*/
 
 /* ===================
@@ -799,7 +913,7 @@ breadcrumb css
 
 .site-breadcrumb .breadcrumb-title {
   font-size: 40px;
-  color: #fff;
+  color: #e31e24;
   font-weight: 700;
   margin-bottom: 10px;
   text-transform: uppercase;
@@ -861,13 +975,6 @@ breadcrumb css
   }
 }
 
-/* @media (max-width: 768px) {
-  .site-breadcrumb-wrapper{
-   width: 452px;
-  }
-} */
-
-
 .contact-wrapper {
   padding: 50px 30px;
   background: #fff;
@@ -907,7 +1014,7 @@ breadcrumb css
 }
 .contact-form-header {
   margin-bottom: 30px;
-  color: #192E3F;
+  color: #e31e24!important;
 }
 .contact-form .form-group {
   margin-bottom: 25px;
