--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
-  margin: 0 0 15px;
+  margin: 10px 0 15px;
   color: #444;
   font-weight: 500;
 }
@@ -704,10 +704,10 @@ div#preloader {
 
 }
 .about_Para{
-  color: #444;
+  color: #000;
   font-size: 18px;
+  font-family: 'Raleway';
   font-weight: 400;
-
 }
 .about1{
   padding-top: 45px;
@@ -730,6 +730,35 @@ div#preloader {
   margin-left: 34px;
   margin-bottom: 50px;
   margin-top: 30px;
+}
+
+@media (max-width: 768px) {
+  .about_head{
+    padding-top: 20px;
+    color : rgb(232, 18, 18);
+    padding-left: 10px;
+    margin-top: 30px;
+    font-weight: 600;
+  }
+  .about_Para{
+    color: #000;
+    font-size: 18px;
+    font-family: 'Raleway';
+    font-weight: 400;
+  }
+  .about1{
+    font-size:32px;
+    text-align:center;
+    
+  }
+  .about2{
+    font-size: 17px;
+    font-weight: 500;
+    color: #fff;
+    font-family: 'Raleway';
+    text-align:center;
+  }
+  
 }
 
 
